--- a/index.html
+++ b/index.html
@@ -6,52 +6,54 @@
     <meta name="description" content="map of most popular malls in riyadh-sa">
     <meta name="author" content="Latifa fawaz">
     <title>Neighborhood map</title>
+
     <style>
       #map {
-          bottom: 0px;
-          height: 100%;
-          width: 70%;
-          position: absolute;
-          right: 0px;
+    bottom: 0px;
+    height: 100%;
+    width: 75%;
+    position: absolute;
+    right: 0px;
       }
-      #mallList {
-          background: white;
-          height: 100%;
-          text-align: left;
-          width: 30%;
+      #searchDiv {
+    background: white;
+    height: 100%;
+    /*line-height: 35px;*/
+    /*text-align: left;*/
+    width: 25%;
+      }
+
+      .searchBox{
+        width: 90%;
       }
 
     </style>
   </head>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="js/knockout-3.4.2.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/mapJS.js"></script>
+    <style type="text/css" src="css/bootstrap.min.css"></style>
 
 
 
   <body>
     <!--map Box-->
-    <div id="map"></div>
+    <div class="container">
+    <div class="row centered">
+    <div id="map" class="col-xs-9"></div>
+    <div id="searchDiv" class="col-xs-3">
+        <h2>Restaurant In Riyadh SA</h1>
+        <input class="searchBox" placeholder="Search…" type="search" data-bind="value: query, valueUpdate: 'keyup'" autocomplete="off">
+        <ul data-bind="foreach: {data: search, as: 'place'} ">
+          <li>
+          <p data-bind="text: place.name"></p>
+          </li>
+        </ul>
 
-    <div id="mallList">
-        <!--Search Box-->
-        <header>
-            <h1>Restaurant In Riyadh SA</h1>
-            <form>
-                <input type="text" placeholder="Search" autofocus>
-                <button type="submit" >Search</button>
-            </form>
-            <p>
-            </p>
-        </header>
-        <aside>
-            <ul>
-            </ul>
-        </aside>
+    </div>
 
-
+    </div>
     </div>
 <!--     <script async defer
       src="https://maps.googleapis.com/maps/api/place/nearbysearch/json?location=24.713488,46.675339&radius=5000&type=restaurant&key=AIzaSyBeMiDVUV0I5J7UTRbEJnGYd9SsGNR2LZ8&callback=initLocation">
