--- a/index.html
+++ b/index.html
@@ -11,22 +11,42 @@
       #map {
     bottom: 0px;
     height: 100%;
-    width: 75%;
+    width: 100%;
     position: absolute;
     right: 0px;
       }
-      #searchDiv {
-    background: white;
-    height: 100%;
-    /*line-height: 35px;*/
-    /*text-align: left;*/
+    #searchDiv {
+    text-align: center;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 99;
     width: 25%;
-      }
+    min-width :250px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+    background-color: rgba(255, 255, 255, 0.6);;
 
-      .searchBox{
-        width: 90%;
-      }
+    }
+    .searchList{
 
+
+    max-height: 400px;
+    text-align: left;
+    hight:25%;
+    max-height: 400px;
+    overflow:scroll;
+
+
+
+    }
+
+    .searchBox{
+      width: 100%;
+
+    }
+    @media only screen and (max-width: 550px) {
+      .searchList { display: none;}
+    }
     </style>
   </head>
 
@@ -38,26 +58,24 @@
 
 
   <body>
-    <!--map Box-->
     <div class="container">
-    <div class="row centered">
-    <div id="map" class="col-xs-9"></div>
-    <div id="searchDiv" class="col-xs-3">
-        <h2>Restaurant In Riyadh SA</h1>
+    <div id="map"></div>
+    <div id="searchDiv">
+        <h3>Restaurant In Riyadh SA</h3>
         <input class="searchBox" placeholder="Search…" type="search" data-bind="value: query, valueUpdate: 'keyup'" autocomplete="off">
+
+        <div class="searchList">
         <ul data-bind="foreach: {data: search, as: 'place'} ">
           <li>
-          <p data-bind="text: place.name"></p>
+          <p data-bind="text: place.venue.name, click: $parent.clickPlace"></p>
           </li>
         </ul>
+        </div>
 
     </div>
+    </div>
 
-    </div>
-    </div>
-<!--     <script async defer
-      src="https://maps.googleapis.com/maps/api/place/nearbysearch/json?location=24.713488,46.675339&radius=5000&type=restaurant&key=AIzaSyBeMiDVUV0I5J7UTRbEJnGYd9SsGNR2LZ8&callback=initLocation">
-    </script> -->
+
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&key=AIzaSyBeMiDVUV0I5J7UTRbEJnGYd9SsGNR2LZ8&callback=initMap">
     </script>
