--- a/index.html
+++ b/index.html
@@ -50,10 +50,8 @@
     </style>
   </head>
 
-    <script src="js/knockout-3.4.2.js"></script>
-    <!-- <script src="js/jquery.min.js"></script> -->
+
     <script src="js/mapJS.js"></script>
-    <!-- <style type="text/css" src="css/bootstrap.min.css"></style> -->
 
 
 
@@ -76,6 +74,7 @@
     </div>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&key=AIzaSyBeMiDVUV0I5J7UTRbEJnGYd9SsGNR2LZ8&callback=initMap">
     </script>
