--- a/index.html
+++ b/index.html
@@ -6,57 +6,16 @@
     <meta name="description" content="map of most popular malls in riyadh-sa">
     <meta name="author" content="Latifa fawaz">
     <title>Neighborhood map</title>
-
-    <style>
-      #map {
-    bottom: 0px;
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    right: 0px;
-      }
-    #searchDiv {
-    text-align: center;
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    z-index: 99;
-    width: 25%;
-    min-width :250px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-    background-color: rgba(255, 255, 255, 0.6);;
-
-    }
-    .searchList{
-
-
-    max-height: 400px;
-    text-align: left;
-    hight:25%;
-    max-height: 400px;
-    overflow:scroll;
-
-
-
-    }
-
-    .searchBox{
-      width: 100%;
-
-    }
-    @media only screen and (max-width: 550px) {
-      .searchList { display: none;}
-    }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
 
 
-    <script src="js/mapJS.js"></script>
+
 
 
 
   <body>
-    <div class="container">
+    <div>
     <div id="map"></div>
     <div id="searchDiv">
         <h3>Restaurant In Riyadh SA</h3>
@@ -73,10 +32,10 @@
     </div>
     </div>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
+    <script src="js/mapJS.js"></script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&key=AIzaSyBeMiDVUV0I5J7UTRbEJnGYd9SsGNR2LZ8&callback=initMap">
-    </script>
+    src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&key=AIzaSyBeMiDVUV0I5J7UTRbEJnGYd9SsGNR2LZ8&callback=initMap" onerror="ErrorHandlingFunction()"></script>
   </body>
 </html>
